<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_typing_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bmille12@tufts.edu">bmk</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS 2 client library -->
  <depend>rclpy</depend>

  <!-- Message / action packages -->
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Vision utilities -->
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>

  <!-- MoveIt 2 -->
  <depend>moveit_py</depend>

  <!-- Python system packages (rosdep) -->
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <!-- Interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
